[project]
name = "blog-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "google>=3.0.0",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "jwt>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.9",
    "openai>=2.32.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["workflows", "api", "config", "schemas", "database", "logger", "exception", "prompt_library", "utils", "routers"]
exclude = ["notebooks", "logs", "images", "generated_blogs"]
